--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "symfony/var-dumper": "^4.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "phpunit/phpunit": ">=4.8 < 6.0",
+        "squizlabs/php_codesniffer": "^3.3"
     },
     "autoload-dev": {
         "psr-4": {
