--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
-            "App\\": "./App/"
+            "App\\": ".app/"
         }
     },
     "config": {
