--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/",
-            "Web\\": "app/web/"
+            "Web\\Controllers\\": "/web/Http/Controllers/",
+            "Web\\Interface\\": "/web/Http/Controllers/Interface/",
+            "Web\\Entity\\": "/web/Http/Models/Entity/",
+            "Web\\Entity\\Repository\\": "/web/Http/Models/Repository/"
         }
     },
     "config": {
