--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,19 @@
         "phpunit/phpunit": ">=4.8 < 6.0",
         "squizlabs/php_codesniffer": "^3.3"
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/",
+    "autoload" : {
+        "psr-4" : {
             "Web\\": "./web/",
             "Web\\Controllers\\": "./web/Http/Controllers/",
             "Web\\Interface\\": "./web/Http/Controllers/Interface/",
             "Web\\Entity\\": "./web/Http/Models/Entity/",
             "Web\\Entity\\Repository\\": "./web/Http/Models/Repository/"
+        }    
+    },
+
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
         }
     },
     "config": {
