--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,7 @@
     },
     "autoload" : {
         "psr-4" : {
-            "Web\\": "./web/",
-            "Web\\Controllers\\": "./web/Http/Controllers/",
-            "Web\\Interface\\": "./web/Http/Controllers/Interface/",
-            "Web\\Entity\\": "./web/Http/Models/Entity/",
-            "Web\\Entity\\Repository\\": "./web/Http/Models/Repository/"
+          "Web\\": "web/"
         }    
     },
 
