--- a/composer.json
+++ b/composer.json
@@ -30,13 +30,14 @@
     },
     "autoload": {
         "psr-4": {
-          "App\\": "src/"
+          "Web\\": "src/web/"
         }    
     },
 
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Web\\": "src/web/"
         }
     },
     "config": {
