--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "twig/extensions": "^1.5",
         "doctrine/dbal": "^2.8",
         "doctrine/persistence": "^1.0",
-        "symfony/var-dumper": "^4.1"
+        "symfony/var-dumper": "^4.1",
+        "tuupola/slim-basic-auth": "^3.2",
+        "slim/csrf": "^0.8.3"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0",
