--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "doctrine/persistence": "^1.0",
         "symfony/var-dumper": "^4.1",
         "tuupola/slim-basic-auth": "^3.2",
-        "slim/csrf": "^0.8.3"
+        "slim/csrf": "^0.8.3",
+        "tuupola/slim-jwt-auth": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0",
