--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "symfony/var-dumper": "^4.1",
         "tuupola/slim-basic-auth": "^3.2",
         "slim/csrf": "^0.8.3",
-        "tuupola/slim-jwt-auth": "^3.1"
+        "tuupola/slim-jwt-auth": "^3.1",
+        "slim/flash": "^0.4.0",
+        "dflydev/fig-cookies": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0",
